fix vertical photos on mobile

--- a/src/components/GridItemVertical/GridItemVertical.module.scss
+++ b/src/components/GridItemVertical/GridItemVertical.module.scss
@@ -50,6 +50,7 @@
   }
   .verticalImg {
     max-width: 100%;
+    width: 100%;
   }
   .horizontalImg {
     max-width: 100%;
